; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-dhcp-lease.c_lease_parse_string.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-dhcp-lease.c_lease_parse_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i64, i8**)* @lease_parse_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lease_parse_string(i8** %0, i64 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  store i8** %0, i8*** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8** %2, i8*** %7, align 8
  %9 = load i8**, i8*** %5, align 8
  %10 = call i32 @assert(i8** %9)
  %11 = load i8**, i8*** %7, align 8
  %12 = call i32 @assert(i8** %11)
  %13 = load i64, i64* %6, align 8
  %14 = icmp ule i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load i8**, i8*** %7, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = call i8* @mfree(i8* %17)
  %19 = load i8**, i8*** %7, align 8
  store i8* %18, i8** %19, align 8
  br label %44

20:                                               ; preds = %3
  %21 = load i8**, i8*** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = sub i64 %22, 1
  %24 = call i64 @memchr(i8** %21, i32 0, i64 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %20
  %27 = load i32, i32* @EINVAL, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %4, align 4
  br label %45

29:                                               ; preds = %20
  %30 = load i8**, i8*** %5, align 8
  %31 = bitcast i8** %30 to i8*
  %32 = load i64, i64* %6, align 8
  %33 = call i8* @memdup_suffix0(i8* %31, i64 %32)
  store i8* %33, i8** %8, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %39, label %36

36:                                               ; preds = %29
  %37 = load i32, i32* @ENOMEM, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %4, align 4
  br label %45

39:                                               ; preds = %29
  %40 = load i8**, i8*** %7, align 8
  %41 = load i8*, i8** %40, align 8
  %42 = load i8*, i8** %8, align 8
  %43 = call i32 @free_and_replace(i8* %41, i8* %42)
  br label %44

44:                                               ; preds = %39, %15
  store i32 0, i32* %4, align 4
  br label %45

45:                                               ; preds = %44, %36, %26
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @assert(i8**) #1

declare dso_local i8* @mfree(i8*) #1

declare dso_local i64 @memchr(i8**, i32, i64) #1

declare dso_local i8* @memdup_suffix0(i8*, i64) #1

declare dso_local i32 @free_and_replace(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
